--- a/products.html
+++ b/products.html
@@ -30,11 +30,11 @@
                             <a class="nav-link" href="products.html">PRODUCTS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT</a>
+                            <a class="nav-link" href="index.html#contact-id">CONTACT</a>
                         </li>
                         <li class="nav-item img-link">
                             <a class="nav-link 
-                            " href="#"><img src="resources/img/shopping-cart.svg" alt="">
+                            " href="order.html"><img src="resources/img/shopping-cart.svg" alt="">
                                 <img class="cart-hover" src="resources/img/shopping-cart (1).svg" alt=""></a>
                         </li>
                     </ul>
@@ -48,8 +48,8 @@
         <div class="container-fluid">
             <div id="myBtnContainer">
                 <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-                <button class="btn" onclick="filterSelection('hand-cream')"> Hand cream</button>
-                <button class="btn" onclick="filterSelection('hand-soap')"> Hand soap</button>
+                <button class="btn" id="hand-cream" onclick="filterSelection('hand-cream')"> Hand cream</button>
+                <button class="btn" id="hand-soap" onclick="filterSelection('hand-soap')"> Hand soap</button>
                 <button class="btn" onclick="filterSelection('face-mask')"> Face mask</button>
                 <button class="btn" onclick="filterSelection('Under-eye-cream')">Under-eye cream</button>
             </div>
@@ -210,7 +210,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="products.html">products</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="index.html#contact-id">Contact</a></li>
                         </ul>
                     </nav>
                     <div class="foo-social">
