--- a/order.html
+++ b/order.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="vendors/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendors/css/animate.css">
     <link rel="stylesheet" href="resources/css/style.css">
-    <title>About us</title>
+    <title>Document</title>
 </head>
 
 <body>
     <header>
-        <div class="container-fluid ">
+        <div class="container-fluid " id="head">
             <nav class=" navbar navbar-expand-lg navbar-light p-0 ">
                 <a class="navbar-brand" href="index.html"><img src="resources/img/Icon.png" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,9 +21,6 @@
             </button>
                 <div class="collapse navbar-collapse " id="navbarNav">
                     <ul class="navbar-nav ml-5  ">
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="#">HOME</a>
-                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">ABOUT US</a>
                         </li>
@@ -44,23 +41,38 @@
         </div>
     </header>
 
-    <section class="about-us">
-        <img class="cover-img" src="resources/img/mark-harpur-K2s_YE031CA-unsplash.jpg" alt="">
-        <div class="about-us-overlay">
-            <div class="container-fluid text-center">
-
-                <img src="resources/img/Icon_2.png" alt="">
-                <p class="text-uppercase m-0 heading-p">about our spa center</p>
-
-                <h2 class="text-uppercase m-0">come and you will be inspired!</h2>
-
-                <p class=" about-us-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quae nemo, veniam illum eveniet molestias debitis nostrum eos earum ad minima voluptates impedit? Reprehenderit ipsum distinctio facere esse enim repudiandae! Vero dolorum beatae
-                    tempore corporis impedit, incidunt reprehenderit praesentium porro voluptates recusandae odit perspiciatis in rerum sit perferendis ipsum ducimus. Exercitationem perspiciatis, quam libero eligendi nihil dolorum veniam tempora tenetur
-                    eaque ipsum voluptatum, rerum odit distinctio! Labore qui tempora illum architecto facere, veniam ab, corrupti possimus quis odit officia pariatur voluptatibus praesentium obcaecati. Dolorem vitae dicta excepturi obcaecati fugiat sint
-                    earum quae mollitia asperiores rerum exercitationem, autem quasi, voluptatibus sapiente quia. Vero, fugit quod, fuga repellendus pariatur libero possimus obcaecati nobis rerum animi quae placeat excepturi reiciendis. Quisquam quasi
-                    quibusdam ad aliquid? Placeat exercitationem reiciendis quo nemo dolorem nisi deserunt tempore velit. Natus animi, totam, officiis labore consequatur qui nesciunt id voluptate eius sequi nisi ipsum quam ad tempore ab.</p>
+    <section class="order">
+        <h2 class="text-uppercase text-center my-0">Order Now!!!</h2>
+        <div class="container-fluid">
+            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure maxime minus cumque iusto assumenda excepturi veniam sint laborum quis veritatis.</p>
+            <div class="row">
+                <div class="col-md-4">
+                    <address>
+                        <img src="resources/img/navigator.svg" alt="">
+                         848 E 28th ST, BROOKLYN <br>
+                         NEW YORK, USA       
+                    </address>
+                    <address>
+                        <img src="resources/img/envelope.svg" alt="">
+                        <a href="#">example@leospa.com</a>
+                        <a href="#">example@leospa.com</a>
+                    </address>
+                    <address>
+                        <img src="resources/img/telephone.svg" alt="">
+                        <a href="#">tel:+02 365 2365 3265 (02)</a><br>
+                        <a href="#">+01 365 2365 3265 (04)</a>
+                    </address>
+                </div>
+                <div class="col-md-7">
+                    <form action="inc/contact.php" class="contact-form" name="contactform" method="post" id="contact-form">
+                        <input type="text" placeholder="Name, Last name" name="name" id="name">
+                        <input type="text" placeholder="Address" name="address" id="address">
+                        <input type="text" placeholder="Email Address" name="email" id="email">
+                        <textarea placeholder="Your order" name="order" id="order"></textarea>
+                        <button type="submit" class="submit-btn" id="submit">Order Now</button>
+                    </form>
+                </div>
             </div>
-        </div>
     </section>
 
     <footer class="footer">
@@ -73,7 +85,7 @@
                     <nav class="foo-nav">
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About us</a></li>
+                            <li><a href="about.html">About Us</a></li>
                             <li><a href="products.html">products</a></li>
                             <li><a href="index.html#contact-id">Contact</a></li>
                         </ul>
@@ -93,9 +105,6 @@
             </div>
         </div>
     </footer>
-
-
-
 
 
     <script src="vendors/js/jquery-3.5.1.min.js"></script>
